crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__incorrect-indent_S105.f90.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
---
./resources/test/fixtures/style/S105.f90:1:1: S105 [*] Invalid indentation
  |
1 |   !> my module
  | ^^ S105
2 | module mmod
3 |   #if USE_MPI==1
  |
  = help: Replace with correct spaces

ℹ Safe fix
1   |-  !> my module
  1 |+!> my module
2 2 | module mmod
3 3 |   #if USE_MPI==1
4 4 |   use mpi

./resources/test/fixtures/style/S105.f90:3:1: S105 [*] Invalid indentation
  |
1 |   !> my module
2 | module mmod
3 |   #if USE_MPI==1
  | ^^ S105
4 |   use mpi
5 | #endif
  |
  = help: Replace with correct spaces

ℹ Safe fix
1 1 |   !> my module
2 2 | module mmod
3   |-  #if USE_MPI==1
  3 |+#if USE_MPI==1
4 4 |   use mpi
5 5 | #endif
6 6 | implicit none

./resources/test/fixtures/style/S105.f90:4:1: S105 [*] Invalid indentation
  |
2 | module mmod
3 |   #if USE_MPI==1
4 |   use mpi
  | ^^ S105
5 | #endif
6 | implicit none
  |
  = help: Replace with correct spaces

ℹ Safe fix
1 1 |   !> my module
2 2 | module mmod
3 3 |   #if USE_MPI==1
4   |-  use mpi
  4 |+    use mpi
5 5 | #endif
6 6 | implicit none
7 7 | 

./resources/test/fixtures/style/S105.f90:6:1: S105 [*] Invalid indentation
  |
4 |   use mpi
5 | #endif
6 | implicit none
  | ^ S105
7 |
8 | !> my type
  |
  = help: Replace with correct spaces

ℹ Safe fix
3 3 |   #if USE_MPI==1
4 4 |   use mpi
5 5 | #endif
6   |-implicit none
  6 |+    implicit none
7 7 | 
8 8 | !> my type
9 9 | type :: my_type

./resources/test/fixtures/style/S105.f90:8:1: S105 [*] Invalid indentation
   |
 6 | implicit none
 7 |
 8 | !> my type
   | ^ S105
 9 | type :: my_type
10 |     integer :: i
   |
   = help: Replace with correct spaces

ℹ Safe fix
5 5 | #endif
6 6 | implicit none
7 7 | 
8   |-!> my type
  8 |+    !> my type
9 9 | type :: my_type
10 10 |     integer :: i
11 11 |   real :: y

./resources/test/fixtures/style/S105.f90:9:1: S105 [*] Invalid indentation
   |
 8 | !> my type
 9 | type :: my_type
   | ^ S105
10 |     integer :: i
11 |   real :: y
   |
   = help: Replace with correct spaces

ℹ Safe fix
6  6  | implicit none
7  7  | 
8  8  | !> my type
9     |-type :: my_type
   9  |+    type :: my_type
10 10 |     integer :: i
11 11 |   real :: y
12 12 | contains

./resources/test/fixtures/style/S105.f90:10:1: S105 [*] Invalid indentation
   |
 8 | !> my type
 9 | type :: my_type
10 |     integer :: i
   | ^^^^ S105
11 |   real :: y
12 | contains
   |
   = help: Replace with correct spaces

ℹ Safe fix
7  7  | 
8  8  | !> my type
9  9  | type :: my_type
10    |-    integer :: i
   10 |+        integer :: i
11 11 |   real :: y
12 12 | contains
13 13 |   procedure :: toString

./resources/test/fixtures/style/S105.f90:11:1: S105 [*] Invalid indentation
   |
 9 | type :: my_type
10 |     integer :: i
11 |   real :: y
   | ^^ S105
12 | contains
13 |   procedure :: toString
   |
   = help: Replace with correct spaces

ℹ Safe fix
8  8  | !> my type
9  9  | type :: my_type
10 10 |     integer :: i
11    |-  real :: y
   11 |+        real :: y
12 12 | contains
13 13 |   procedure :: toString
14 14 |         end type my_type

./resources/test/fixtures/style/S105.f90:12:1: S105 [*] Invalid indentation
   |
10 |     integer :: i
11 |   real :: y
12 | contains
   | ^ S105
13 |   procedure :: toString
14 |         end type my_type
   |
   = help: Replace with correct spaces

ℹ Safe fix
9  9  | type :: my_type
10 10 |     integer :: i
11 11 |   real :: y
12    |-contains
   12 |+    contains
13 13 |   procedure :: toString
14 14 |         end type my_type
15 15 | 

./resources/test/fixtures/style/S105.f90:13:1: S105 [*] Invalid indentation
   |
11 |   real :: y
12 | contains
13 |   procedure :: toString
   | ^^ S105
14 |         end type my_type
   |
   = help: Replace with correct spaces

ℹ Safe fix
10 10 |     integer :: i
11 11 |   real :: y
12 12 | contains
13    |-  procedure :: toString
   13 |+        procedure :: toString
14 14 |         end type my_type
15 15 | 
16 16 |   contains

./resources/test/fixtures/style/S105.f90:14:1: S105 [*] Invalid indentation
   |
12 | contains
13 |   procedure :: toString
14 |         end type my_type
   | ^^^^^^^^ S105
15 |
16 |   contains
   |
   = help: Replace with correct spaces

ℹ Safe fix
11 11 |   real :: y
12 12 | contains
13 13 |   procedure :: toString
14    |-        end type my_type
   14 |+    end type my_type
15 15 | 
16 16 |   contains
17 17 | 

./resources/test/fixtures/style/S105.f90:16:1: S105 [*] Invalid indentation
   |
14 |         end type my_type
15 |
16 |   contains
   | ^^ S105
17 |
18 |   subroutine do_something()
   |
   = help: Replace with correct spaces

ℹ Safe fix
13 13 |   procedure :: toString
14 14 |         end type my_type
15 15 | 
16    |-  contains
   16 |+contains
17 17 | 
18 18 |   subroutine do_something()
19 19 |           integer :: i

./resources/test/fixtures/style/S105.f90:18:1: S105 [*] Invalid indentation
   |
16 |   contains
17 |
18 |   subroutine do_something()
   | ^^ S105
19 |           integer :: i
20 |   i = i + 1 &
   |
   = help: Replace with correct spaces

ℹ Safe fix
15 15 | 
16 16 |   contains
17 17 | 
18    |-  subroutine do_something()
   18 |+    subroutine do_something()
19 19 |           integer :: i
20 20 |   i = i + 1 &
21 21 |   + 2 &

./resources/test/fixtures/style/S105.f90:19:1: S105 [*] Invalid indentation
   |
18 |   subroutine do_something()
19 |           integer :: i
   | ^^^^^^^^^^ S105
20 |   i = i + 1 &
21 |   + 2 &
   |
   = help: Replace with correct spaces

ℹ Safe fix
16 16 |   contains
17 17 | 
18 18 |   subroutine do_something()
19    |-          integer :: i
   19 |+        integer :: i
20 20 |   i = i + 1 &
21 21 |   + 2 &
22 22 |     + 3

./resources/test/fixtures/style/S105.f90:20:1: S105 [*] Invalid indentation
   |
18 |   subroutine do_something()
19 |           integer :: i
20 |   i = i + 1 &
   | ^^ S105
21 |   + 2 &
22 |     + 3
   |
   = help: Replace with correct spaces

ℹ Safe fix
17 17 | 
18 18 |   subroutine do_something()
19 19 |           integer :: i
20    |-  i = i + 1 &
   20 |+        i = i + 1 &
21 21 |   + 2 &
22 22 |     + 3
23 23 |   end subroutine

./resources/test/fixtures/style/S105.f90:21:1: S105 [*] Invalid indentation
   |
19 |           integer :: i
20 |   i = i + 1 &
21 |   + 2 &
   | ^^ S105
22 |     + 3
23 |   end subroutine
   |
   = help: Replace with correct spaces

ℹ Safe fix
18 18 |   subroutine do_something()
19 19 |           integer :: i
20 20 |   i = i + 1 &
21    |-  + 2 &
   21 |+            + 2 &
22 22 |     + 3
23 23 |   end subroutine
24 24 | 

./resources/test/fixtures/style/S105.f90:22:1: S105 [*] Invalid indentation
   |
20 |   i = i + 1 &
21 |   + 2 &
22 |     + 3
   | ^^^^ S105
23 |   end subroutine
   |
   = help: Replace with correct spaces

ℹ Safe fix
19 19 |           integer :: i
20 20 |   i = i + 1 &
21 21 |   + 2 &
22    |-    + 3
   22 |+            + 3
23 23 |   end subroutine
24 24 | 
25 25 | subroutine do_something_else()

./resources/test/fixtures/style/S105.f90:23:1: S105 [*] Invalid indentation
   |
21 |   + 2 &
22 |     + 3
23 |   end subroutine
   | ^^ S105
24 |
25 | subroutine do_something_else()
   |
   = help: Replace with correct spaces

ℹ Safe fix
20 20 |   i = i + 1 &
21 21 |   + 2 &
22 22 |     + 3
23    |-  end subroutine
   23 |+    end subroutine
24 24 | 
25 25 | subroutine do_something_else()
26 26 | integer :: i

./resources/test/fixtures/style/S105.f90:25:1: S105 [*] Invalid indentation
   |
23 |   end subroutine
24 |
25 | subroutine do_something_else()
   | ^ S105
26 | integer :: i
27 |     i = i + 1
   |
   = help: Replace with correct spaces

ℹ Safe fix
22 22 |     + 3
23 23 |   end subroutine
24 24 | 
25    |-subroutine do_something_else()
   25 |+    subroutine do_something_else()
26 26 | integer :: i
27 27 |     i = i + 1
28 28 |   end subroutine do_something_else

./resources/test/fixtures/style/S105.f90:26:1: S105 [*] Invalid indentation
   |
25 | subroutine do_something_else()
26 | integer :: i
   | ^ S105
27 |     i = i + 1
28 |   end subroutine do_something_else
   |
   = help: Replace with correct spaces

ℹ Safe fix
23 23 |   end subroutine
24 24 | 
25 25 | subroutine do_something_else()
26    |-integer :: i
   26 |+        integer :: i
27 27 |     i = i + 1
28 28 |   end subroutine do_something_else
29 29 |     function my_func()

./resources/test/fixtures/style/S105.f90:27:1: S105 [*] Invalid indentation
   |
25 | subroutine do_something_else()
26 | integer :: i
27 |     i = i + 1
   | ^^^^ S105
28 |   end subroutine do_something_else
29 |     function my_func()
   |
   = help: Replace with correct spaces

ℹ Safe fix
24 24 | 
25 25 | subroutine do_something_else()
26 26 | integer :: i
27    |-    i = i + 1
   27 |+        i = i + 1
28 28 |   end subroutine do_something_else
29 29 |     function my_func()
30 30 |     integer :: i

./resources/test/fixtures/style/S105.f90:28:1: S105 [*] Invalid indentation
   |
26 | integer :: i
27 |     i = i + 1
28 |   end subroutine do_something_else
   | ^^ S105
29 |     function my_func()
30 |     integer :: i
   |
   = help: Replace with correct spaces

ℹ Safe fix
25 25 | subroutine do_something_else()
26 26 | integer :: i
27 27 |     i = i + 1
28    |-  end subroutine do_something_else
   28 |+    end subroutine do_something_else
29 29 |     function my_func()
30 30 |     integer :: i
31 31 |   end function

./resources/test/fixtures/style/S105.f90:30:1: S105 [*] Invalid indentation
   |
28 |   end subroutine do_something_else
29 |     function my_func()
30 |     integer :: i
   | ^^^^ S105
31 |   end function
32 | end module mmod
   |
   = help: Replace with correct spaces

ℹ Safe fix
27 27 |     i = i + 1
28 28 |   end subroutine do_something_else
29 29 |     function my_func()
30    |-    integer :: i
   30 |+        integer :: i
31 31 |   end function
32 32 | end module mmod
33 33 | 

./resources/test/fixtures/style/S105.f90:31:1: S105 [*] Invalid indentation
   |
29 |     function my_func()
30 |     integer :: i
31 |   end function
   | ^^ S105
32 | end module mmod
   |
   = help: Replace with correct spaces

ℹ Safe fix
28 28 |   end subroutine do_something_else
29 29 |     function my_func()
30 30 |     integer :: i
31    |-  end function
   31 |+    end function
32 32 | end module mmod
33 33 | 
34 34 | 

./resources/test/fixtures/style/S105.f90:35:1: S105 [*] Invalid indentation
   |
35 |     !> my program
   | ^^^^ S105
36 | program mprog
37 |   use mmod
   |
   = help: Replace with correct spaces

ℹ Safe fix
32 32 | end module mmod
33 33 | 
34 34 | 
35    |-    !> my program
   35 |+!> my program
36 36 | program mprog
37 37 |   use mmod
38 38 |     implicit none

./resources/test/fixtures/style/S105.f90:37:1: S105 [*] Invalid indentation
   |
35 |     !> my program
36 | program mprog
37 |   use mmod
   | ^^ S105
38 |     implicit none
   |
   = help: Replace with correct spaces

ℹ Safe fix
34 34 | 
35 35 |     !> my program
36 36 | program mprog
37    |-  use mmod
   37 |+    use mmod
38 38 |     implicit none
39 39 | 
40 40 | call do_something()

./resources/test/fixtures/style/S105.f90:40:1: S105 [*] Invalid indentation
   |
38 |     implicit none
39 |
40 | call do_something()
   | ^ S105
41 |
42 | block
   |
   = help: Replace with correct spaces

ℹ Safe fix
37 37 |   use mmod
38 38 |     implicit none
39 39 | 
40    |-call do_something()
   40 |+    call do_something()
41 41 | 
42 42 | block
43 43 |     real :: x = 3.142

./resources/test/fixtures/style/S105.f90:42:1: S105 [*] Invalid indentation
   |
40 | call do_something()
41 |
42 | block
   | ^ S105
43 |     real :: x = 3.142
44 |       print*, x
   |
   = help: Replace with correct spaces

ℹ Safe fix
39 39 | 
40 40 | call do_something()
41 41 | 
42    |-block
   42 |+    block
43 43 |     real :: x = 3.142
44 44 |       print*, x
45 45 |     y = x

./resources/test/fixtures/style/S105.f90:43:1: S105 [*] Invalid indentation
   |
42 | block
43 |     real :: x = 3.142
   | ^^^^ S105
44 |       print*, x
45 |     y = x
   |
   = help: Replace with correct spaces

ℹ Safe fix
40 40 | call do_something()
41 41 | 
42 42 | block
43    |-    real :: x = 3.142
   43 |+        real :: x = 3.142
44 44 |       print*, x
45 45 |     y = x
46 46 | inner: block

./resources/test/fixtures/style/S105.f90:44:1: S105 [*] Invalid indentation
   |
42 | block
43 |     real :: x = 3.142
44 |       print*, x
   | ^^^^^^ S105
45 |     y = x
46 | inner: block
   |
   = help: Replace with correct spaces

ℹ Safe fix
41 41 | 
42 42 | block
43 43 |     real :: x = 3.142
44    |-      print*, x
   44 |+        print*, x
45 45 |     y = x
46 46 | inner: block
47 47 |     real :: y = 12.1

./resources/test/fixtures/style/S105.f90:45:1: S105 [*] Invalid indentation
   |
43 |     real :: x = 3.142
44 |       print*, x
45 |     y = x
   | ^^^^ S105
46 | inner: block
47 |     real :: y = 12.1
   |
   = help: Replace with correct spaces

ℹ Safe fix
42 42 | block
43 43 |     real :: x = 3.142
44 44 |       print*, x
45    |-    y = x
   45 |+        y = x
46 46 | inner: block
47 47 |     real :: y = 12.1
48 48 |       print*, y

./resources/test/fixtures/style/S105.f90:46:1: S105 [*] Invalid indentation
   |
44 |       print*, x
45 |     y = x
46 | inner: block
   | ^ S105
47 |     real :: y = 12.1
48 |       print*, y
   |
   = help: Replace with correct spaces

ℹ Safe fix
43 43 |     real :: x = 3.142
44 44 |       print*, x
45 45 |     y = x
46    |-inner: block
   46 |+        inner: block
47 47 |     real :: y = 12.1
48 48 |       print*, y
49 49 | end block inner

./resources/test/fixtures/style/S105.f90:47:1: S105 [*] Invalid indentation
   |
45 |     y = x
46 | inner: block
47 |     real :: y = 12.1
   | ^^^^ S105
48 |       print*, y
49 | end block inner
   |
   = help: Replace with correct spaces

ℹ Safe fix
44 44 |       print*, x
45 45 |     y = x
46 46 | inner: block
47    |-    real :: y = 12.1
   47 |+            real :: y = 12.1
48 48 |       print*, y
49 49 | end block inner
50 50 |   end block

./resources/test/fixtures/style/S105.f90:48:1: S105 [*] Invalid indentation
   |
46 | inner: block
47 |     real :: y = 12.1
48 |       print*, y
   | ^^^^^^ S105
49 | end block inner
50 |   end block
   |
   = help: Replace with correct spaces

ℹ Safe fix
45 45 |     y = x
46 46 | inner: block
47 47 |     real :: y = 12.1
48    |-      print*, y
   48 |+            print*, y
49 49 | end block inner
50 50 |   end block
51 51 |   end program mprog

./resources/test/fixtures/style/S105.f90:49:1: S105 [*] Invalid indentation
   |
47 |     real :: y = 12.1
48 |       print*, y
49 | end block inner
   | ^ S105
50 |   end block
51 |   end program mprog
   |
   = help: Replace with correct spaces

ℹ Safe fix
46 46 | inner: block
47 47 |     real :: y = 12.1
48 48 |       print*, y
49    |-end block inner
   49 |+        end block inner
50 50 |   end block
51 51 |   end program mprog

./resources/test/fixtures/style/S105.f90:50:1: S105 [*] Invalid indentation
   |
48 |       print*, y
49 | end block inner
50 |   end block
   | ^^ S105
51 |   end program mprog
   |
   = help: Replace with correct spaces

ℹ Safe fix
47 47 |     real :: y = 12.1
48 48 |       print*, y
49 49 | end block inner
50    |-  end block
   50 |+    end block
51 51 |   end program mprog

./resources/test/fixtures/style/S105.f90:51:1: S105 [*] Invalid indentation
   |
49 | end block inner
50 |   end block
51 |   end program mprog
   | ^^ S105
   |
   = help: Replace with correct spaces

ℹ Safe fix
48 48 |       print*, y
49 49 | end block inner
50 50 |   end block
51    |-  end program mprog
   51 |+end program mprog
