crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__incorrect-indent_S105_indent_width_2.f90.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
---
./resources/test/fixtures/style/S105_indent_width_2.f90:2:1: S105 [*] Invalid indentation
  |
1 | program mprog
2 | implicit none
  | ^ S105
3 |         integer :: i
4 |   i = 3
  |
  = help: Replace with correct spaces

ℹ Safe fix
1 1 | program mprog
2   |-implicit none
  2 |+  implicit none
3 3 |         integer :: i
4 4 |   i = 3
5 5 |  if (i == 2) then

./resources/test/fixtures/style/S105_indent_width_2.f90:3:1: S105 [*] Invalid indentation
  |
1 | program mprog
2 | implicit none
3 |         integer :: i
  | ^^^^^^^^ S105
4 |   i = 3
5 |  if (i == 2) then
  |
  = help: Replace with correct spaces

ℹ Safe fix
1 1 | program mprog
2 2 | implicit none
3   |-        integer :: i
  3 |+  integer :: i
4 4 |   i = 3
5 5 |  if (i == 2) then
6 6 |    i = 3

./resources/test/fixtures/style/S105_indent_width_2.f90:5:1: S105 [*] Invalid indentation
  |
3 |         integer :: i
4 |   i = 3
5 |  if (i == 2) then
  | ^ S105
6 |    i = 3
7 |    end if
  |
  = help: Replace with correct spaces

ℹ Safe fix
2 2 | implicit none
3 3 |         integer :: i
4 4 |   i = 3
5   |- if (i == 2) then
  5 |+  if (i == 2) then
6 6 |    i = 3
7 7 |    end if
8 8 | end program mprog

./resources/test/fixtures/style/S105_indent_width_2.f90:6:1: S105 [*] Invalid indentation
  |
4 |   i = 3
5 |  if (i == 2) then
6 |    i = 3
  | ^^^ S105
7 |    end if
8 | end program mprog
  |
  = help: Replace with correct spaces

ℹ Safe fix
3 3 |         integer :: i
4 4 |   i = 3
5 5 |  if (i == 2) then
6   |-   i = 3
  6 |+    i = 3
7 7 |    end if
8 8 | end program mprog

./resources/test/fixtures/style/S105_indent_width_2.f90:7:1: S105 [*] Invalid indentation
  |
5 |  if (i == 2) then
6 |    i = 3
7 |    end if
  | ^^^ S105
8 | end program mprog
  |
  = help: Replace with correct spaces

ℹ Safe fix
4 4 |   i = 3
5 5 |  if (i == 2) then
6 6 |    i = 3
7   |-   end if
  7 |+  end if
8 8 | end program mprog
