crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__incorrect-space-around-double-colon_S103.f90.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
S103 [*] Missing space around `::`
 --> ./resources/test/fixtures/style/S103.f90:3:17
  |
1 | program myprog
2 |   implicit none
3 |   use, intrinsic:: iso_fortran_env, only:int64, real64 ! This should add a space before the double colon and not change the single colon
  |                 ^^
4 |   private
5 |   integer ::i ! This should add a space after the double colon
  |
help: Add extra whitespace
1 | program myprog
2 |   implicit none
  -   use, intrinsic:: iso_fortran_env, only:int64, real64 ! This should add a space before the double colon and not change the single colon
3 +   use, intrinsic :: iso_fortran_env, only:int64, real64 ! This should add a space before the double colon and not change the single colon
4 |   private
5 |   integer ::i ! This should add a space after the double colon
6 |   integer :: j ! ::in comments should be unchanged

S103 [*] Missing space around `::`
 --> ./resources/test/fixtures/style/S103.f90:5:11
  |
3 |   use, intrinsic:: iso_fortran_env, only:int64, real64 ! This should add a space before the double colon and not change the single colon
4 |   private
5 |   integer ::i ! This should add a space after the double colon
  |           ^^
6 |   integer :: j ! ::in comments should be unchanged
7 |   integer :: k ! This should be unchanged
  |
help: Add extra whitespace
2 |   implicit none
3 |   use, intrinsic:: iso_fortran_env, only:int64, real64 ! This should add a space before the double colon and not change the single colon
4 |   private
  -   integer ::i ! This should add a space after the double colon
5 +   integer :: i ! This should add a space after the double colon
6 |   integer :: j ! ::in comments should be unchanged
7 |   integer :: k ! This should be unchanged
8 |   character::x, y, z! This should add spaces before and after the double colon

S103 [*] Missing space around `::`
  --> ./resources/test/fixtures/style/S103.f90:8:12
   |
 6 |   integer :: j ! ::in comments should be unchanged
 7 |   integer :: k ! This should be unchanged
 8 |   character::x, y, z! This should add spaces before and after the double colon
   |            ^^
 9 |   allocate(character(10) :: x) ! This should be unchanged
10 |   allocate(character(10):: y) ! This should add a space before the double colon
   |
help: Add extra whitespace
5  |   integer ::i ! This should add a space after the double colon
6  |   integer :: j ! ::in comments should be unchanged
7  |   integer :: k ! This should be unchanged
   -   character::x, y, z! This should add spaces before and after the double colon
8  +   character :: x, y, z! This should add spaces before and after the double colon
9  |   allocate(character(10) :: x) ! This should be unchanged
10 |   allocate(character(10):: y) ! This should add a space before the double colon
11 |   allocate(character(10) ::z) ! This should add a space after the double colon

S103 [*] Missing space around `::`
  --> ./resources/test/fixtures/style/S103.f90:10:25
   |
 8 |   character::x, y, z! This should add spaces before and after the double colon
 9 |   allocate(character(10) :: x) ! This should be unchanged
10 |   allocate(character(10):: y) ! This should add a space before the double colon
   |                         ^^
11 |   allocate(character(10) ::z) ! This should add a space after the double colon
12 | end program myprog
   |
help: Add extra whitespace
7  |   integer :: k ! This should be unchanged
8  |   character::x, y, z! This should add spaces before and after the double colon
9  |   allocate(character(10) :: x) ! This should be unchanged
   -   allocate(character(10):: y) ! This should add a space before the double colon
10 +   allocate(character(10) :: y) ! This should add a space before the double colon
11 |   allocate(character(10) ::z) ! This should add a space after the double colon
12 | end program myprog

S103 [*] Missing space around `::`
  --> ./resources/test/fixtures/style/S103.f90:11:26
   |
 9 |   allocate(character(10) :: x) ! This should be unchanged
10 |   allocate(character(10):: y) ! This should add a space before the double colon
11 |   allocate(character(10) ::z) ! This should add a space after the double colon
   |                          ^^
12 | end program myprog
   |
help: Add extra whitespace
8  |   character::x, y, z! This should add spaces before and after the double colon
9  |   allocate(character(10) :: x) ! This should be unchanged
10 |   allocate(character(10):: y) ! This should add a space before the double colon
   -   allocate(character(10) ::z) ! This should add a space after the double colon
11 +   allocate(character(10) :: z) ! This should add a space after the double colon
12 | end program myprog
